newsnest/kubernetes/category-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category-service
  labels:
    app: newsnest
    component: category-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: newsnest
      component: category-service
  template:
    metadata:
      labels:
        app: newsnest
        component: category-service
    spec:
      containers:
        - name: category-service
          image: shivam985/newsnest-category-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4002
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 4002
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 4002
            initialDelaySeconds: 10
            periodSeconds: 20
