newsnest/kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: newsnest
    component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: newsnest
      component: frontend
  template:
    metadata:
      labels:
        app: newsnest
        component: frontend
    spec:
      containers:
        - name: frontend
          image: shivam985/newsnest-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
